Node.js setup continues
Installed dotenv and mongoose dependencies.

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "author": "Vehk11s, mintteal and iinajenina",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
